# mir

./: .dockerignore  .env  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  tasks.py
.github/workflows/: pr_check.yml
data/: reserved_keywords.txt
migrations/: README  env.py
migrations/versions/: 093b56f06730_change_hobbies_in_questionary_model.py  25f7b7f4bd03_added_table_post.py  375a6f3f7dc2_.py  4f21deed5f82_add_to_id_to_message_make_text_nullable_.py  51e208efbb6b_add_message.py  5400d9d74491_added_index_model_black_list.py  5478d7d7a63f_.py  5c47a192ce1d_add_age_unqique_constraint_quest_user_.py  6460cd3ea105_.py  6a8cb6ec0180_init_models.py  7cd34eae4fd8_init_models.py  7d3511656dae_add_user_like_choice.py  8212291cbec0_create_model.py  83eb24d97250_updated_models.py  84f11c7d251e_nullable_id_false.py  88566986fa2a_changed_the_type_hint_for_a_column_like.py  96f31b1e3b05_added_model_black_list.py  a444b0f0862d_init_models.py  aa83adadcdb2_add_new_auth.py  afd4c92e479a_new_get_quest_rools.py  bde941774bef_some_changed.py  c347c3783bc4_init.py  c62dad25140c_.py  caa5806332bf_added_rating.py  cf8221c9bee3_get_quests_logic.py  d11477116e69_new_get_quest_rools.py  d42f3150b232_models_changed.py  d725fd364884_new_alg_to_get_quest_list.py  d8ab3febcfba_the_fields_in_the_file_with_models_and_.py  dc48cb81011f_updated_models.py  e0930ee6133d_change_user_id_column_type_int_uuid.py  e29b63342428_.py  f00c794334ef_changed_model_black_list.py  f3ec92236712_added_create_at_in_questionnaire.py  f70eac98d788_.py  fa5f9699e17b_new_quest_model.py  fbec8bc555f3_add_new_field_for_like.py  fea63b8cc44c_initial.py
src/: config.py  database.py  exceptions.py  main.py
src/admin/: __init__.py  auth_provider.py  views.py
src/auth/: __init__.py  base_config.py  crud.py  manager.py  models.py  params_choice.py  routers.py  schemas.py  utils.py
src/chat/: exceptions.py  models.py  redis.py  routers.py  schemas.py  util.py  utils.py
src/likes/: crud.py  models.py  router.py  routers.py  schemas.py
src/matches/: crud.py  models.py  router.py  routers.py  schemas.py  utils.py
src/mongodb/: mongodb.py
src/posts/: __init__.py  models.py  routers.py  schemas.py
src/questionary/: crud.py  models.py  params_choice.py  routers.py  schemas.py
src/questionnaire/: crud.py  models.py  params_choice.py  routers.py  schemas.py
src/redis/: redis.py
templates/: admin_login.html
test_database_data/: README.md  db_test_data_load.py
test_database_data/tables/: auth_user.sql  black_list_user.sql  match.sql  message.sql  user_like.sql  user_questionnaire.sql  user_settings.sql
tests/: conftest.py  fixtures.py  test_acceptance.py  test_auth.py  test_likes.py  test_matches.py
tests/auth_test/: test_auth.py
tests/tests_redis/: test_redis.py
tests/with_db/: test_acceptance.py  test_bad_crud.py  test_chat.py  test_crud.py  test_likes.py  test_models.py  test_questionnaire.py
